--- a/sba-react-web-app/src/App.css
+++ b/sba-react-web-app/src/App.css
@@ -113,6 +113,7 @@ h1 {
 
 /* Quiz Page Container */
 .quiz-container {
+ 
   max-width: 800px;
   margin: 40px auto;
   padding: 20px;
@@ -121,6 +122,7 @@ h1 {
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border: 1px solid #ddd;
+  
 }
 
 /* Question Header */
@@ -153,6 +155,7 @@ h1 {
 
 /* Feedback Section */
 .quiz-container div {
+  
   margin-top: 20px;
   font-size: 18px;
   color: #444;
@@ -168,6 +171,7 @@ h1 {
 
 
 .quiz-container {
+  
   max-width: 600px;
   margin: auto;
   padding: 20px;
@@ -223,16 +227,15 @@ h1 {
 
 /* General styles for the scoreboard container */
 .scoreboard-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: top;
-  height: 100vh;
-  background-color: #f9f9f9; /* Light background for contrast */
-  color: #333; /* Dark text for readability */
-  /*font-family: Arial, sans-serif;*/
-  text-align: center;
+  height: 500px;
+  max-width: 800px;
+  margin: 40px auto;
   padding: 20px;
+  text-align: center;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border: 1px solid #ddd;
 }
 
 /* Title styling */
